--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python"
+    "python.pythonPath": "/home/nicholas/Desktop/Cookit/CookIt/venv/bin/python3.7"
 }
