--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-Python==3.7.8
-Django==3.0.8
+asgiref==3.2.10
+autopep8==1.5.4
+Django==3.1.2
+django-crispy-forms==1.9.2
+django-extensions==3.0.9
+django-slugify-processor==0.9.0
 Pillow==7.2.0
+pycodestyle==2.6.0
+pytz==2020.1
+sqlparse==0.4.1
+toml==0.10.1
