--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@popperjs/core": "^2.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -17,6 +19,7 @@
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
