--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-highlightjs": "^1.3.3",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
