--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.5.1",
