--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/filipe/Documentos/PDS/venv/bin/python3"
+    "python.pythonPath": "c:\\Users\\20181014040022\\Documents\\Django\\venv\\Scripts\\python.exe"
 }
